--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=security.demo.app
 logging.level.root = trace
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/ems-realm
 server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=postgres
+spring.datasource.password=password123
