--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=security.demo.app
 logging.level.root = trace
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/ems-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keen_carson:8081/realms/ems-realm
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.url=jdbc:postgresql://postgres-cont:5432/demo
 spring.datasource.username=postgres
 spring.datasource.password=password123
