--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=security.demo.app
 logging.level.root = trace
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keen_carson:8080/realms/ems-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/ems-realm
 server.port=8080
 
 spring.datasource.url=jdbc:postgresql://postgres-cont:5432/demo
